# mir

./: .bzrignore  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .project  .travis.yml  CMakeLists.txt  C_FUNCTION_AUDIT_REPORT.md  Cargo.toml  DEPENDENCIES  HACKING  HACKING-android.md  HACKING.md  PLATFORM_AUDIT_REPORT.md  README  README.md  Readme  SECURITY.md  VERSION  bors.toml  client-ABI-8-sha1sums  client-ABI-sha1sums  common-ABI-sha1sums  cross-compile-chroot.sh  cross-compile.sh  deploy-and-test.sh  install_on_android.sh  native-compile.sh  platform-ABI-sha1sums  renovate.json  server-ABI-23-sha1sums  server-ABI-sha1sums  setup-partial-armhf-chroot.sh  spread.yaml
benchmarks/: CMakeLists.txt  benchmark_multiplexing_dispatchable.cpp  commit_to_present.py  key_event_latency.py  mir_perf_framework_setup.py  mir_perf_framework_setup.py.in  nested_client_to_display_buffer_latency.py  touch_event_latency.py
benchmarks/android-input/: CMakeLists.txt  input_reader_perf.cpp  ntrig_input_events.h
benchmarks/cpu/: CMakeLists.txt  benchmark.sh.in
benchmarks/frame-uniformity/: CMakeLists.txt  README.txt  frame_uniformity_test.cpp  frame_uniformity_test.h  main.cpp  touch_measuring_client.cpp  touch_measuring_client.h  touch_producing_server.cpp  touch_producing_server.h  touch_samples.cpp  touch_samples.h  vsync_simulating_graphics_platform.cpp  vsync_simulating_graphics_platform.h
benchmarks/memory/: CMakeLists.txt  benchmark.sh.in
benchmarks/mir_perf_framework/: README  __init__.py  client.py  common.py  input.py  performance_test.py  server.py
benchmarks/text_histogram/: __init__.py
crates/mir-rs/: Cargo.toml
crates/mir-rs-sys/: Cargo.toml  build.rs
doc/: .readthedocs.yaml  .wokeignore  CMakeLists.txt  Doxyfile  Doxyfile.in  abi_compatibility_tools.md  android_new_device_bringup.md  android_technical_details.md  avoid_deploy-and-test.md  building_mir_for_android.md  building_source_for_android.md  building_source_for_arm.md  building_source_for_pc.md  component_reports.md  custom_conf.py  custom_conf.py.in  debug_for_xmir.md  demo_server_controls.md  demo_shell_controls.md  dso_versioning_guide.md  extra.css  footer.html  footer.html.in  getting_and_using_mir.md  getting_involved_in_mir.md  installing_prebuilt_on_android.md  installing_prebuilt_on_pc.md  introducing_the_miral_api.md  introducing_the_miral_api.md.in  kernel_requirements.md  mainpage.md  measuring_latency.md  performance_framework.md  setup_kvm_for_mir.md  setup_vmware_for_mir.md  snappy_appliances.md  using_mir_on_android.md  using_mir_on_pc.md
doc/sphinx/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wordlist.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  architecture.md  architecture.mermaid  architecture.puml  architecture_diagram.rst  component_reports.rst  conf.py  conf.py.in  configuring-index.md  (+23 more)
end-to-end-tests/: CMakeLists.txt  input_dispatch_fixture.h  mock_input_device.h  mock_input_event.h  test_input_dispatch.cpp  test_renderloop.cpp
examples/: CMakeLists.txt  README  animated_cursor_demo_client.c  as_render_target.h  basic.c  basic_server.cpp  basic_server_configuration.cpp  basic_server_configuration.h  buffer_render_target.cpp  buffer_render_target.h  camapp.c  camapp.h  camera.c  chain_jumping_buffers.c  client_helpers.cpp  client_helpers.h  client_touch_validator.cpp  cursor-theme-dump.cpp  cursors_demo_client.c  demo_client.c  demo_client_accelerated.cpp  demo_client_display_config.c  demo_client_display_config.cpp  demo_client_egl_image.c  demo_client_egl_image.cpp  demo_client_unaccelerated.c  demo_input_filter.cpp  demo_server.cpp  eglapp.c  eglapp.h  eglcounter.cpp  eglflash.c  eglfoo.c  eglplasma.c  eglsquare.cpp  eglstateswitcher.c  egltriangle.c  example_add_glog_options.cpp  example_add_glog_options.h  example_display_configuration_policy.cpp  (+98 more)
integration-tests/: CMakeLists.txt
mir-rs/: CMakeLists.txt  Cargo.toml  README.md
mir-rs-sys/: CMakeLists.txt  Cargo.toml  README.md  build.rs
miral-rs/: CMakeLists.txt  Cargo.toml  README.md
miral-sys/: CMakeLists.txt  Cargo.toml  README.md  build.rs
playground/: CMakeLists.txt  README  buffer_render_target.h  diamond.c  diamond.h  egldiamond_render_surface.c  eglflash_render_surface.c  image_renderer.h  mir_demo_client_chain_jumping_buffers.c  mir_demo_client_prerendered_frames.c  mir_demo_prerendered_frames.c  mir_egl_platform_shim.c  mir_egl_platform_shim.h  mir_eglplatform_driver_code.c  mir_eglplatform_driver_code.h  render_surface.cpp  render_surfaces.cpp  screencast.cpp  server_configuration.cpp  server_configuration.h  server_example_display_configuration_policy.cpp
snappy/: CMakeLists.txt  copy-external-libs.sh  mir-demos.package.yaml.in  mir-run  mir.framework.in  mir.package.yaml.in  package.yaml.in  readme.md  run
src/: CMakeLists.txt  default_server_configuration.cpp  display.cpp  display_server.cpp  main.cpp  mirserver.pc.in  server_configuration.cpp  wrapper.c
tests/: CMakeLists.txt  device.cpp  mirtest-internal.pc.in  mirtest.pc.in  test_input_dispatch.cpp  test_renderloop.cpp
tools/: CMakeLists.txt  abi-check-mirclient-skip-symbols  abi-check-mircommon-skip-symbols  abi-check-mirserver-skip-symbols  abi_check.sh  abigail_check.sh  abigail_suppressions_client  abigail_suppressions_generic  abigail_suppressions_server  bot-data.tar.xz.enc  buffer_render_target.cpp  buffer_render_target.h  demo_client.c  detect_fd_leaks.bash  detect_fd_leaks.sh  dev-upload.sh  discover_gtests.sh  generate-abi-base-dump.sh  generate-symbol-maps.py  image_renderer.cpp  install_on_android.sh  lib_descriptor.xml.skel  lsan-suppressions  make_release_tarball  mir-compositor-smoke-test.bash  mir-smoke-test-runner.sh  mir_image.h  png2header.py  ppa-upload.sh  process_doxygen_xml.py  process_doygen_xml.py  process_doyygen_xml.py  process_snaps.py  render_surfaces.cpp  render_to_fb.cpp  requirements.txt  run_abi_compliance_checker.sh  run_ctests.sh  scan_symbols.py  setup-android-dependencies.sh  (+16 more)
unit-tests/: CMakeLists.txt  test_synchronizer.cpp
(+7895 files in other folders)
