[workspace]
members = [
  "src/platforms/evdev-rs",
]
resolver = "2"

[workspace.package]
name = "mir"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
input = "0.9.1"
libc = "0.2.176"
nix = { version = "0.30.1", features = ["poll"] }