[workspace]
members = [
  "src/platforms/evdev-rs",
  "src/wayland/wayland_rs"
]
resolver = "2"

[workspace.package]
name = "mir"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
input = { version = ">=0.8.3, <0.10", features = ["libinput_1_19"] }
libc = "0.2.175"
nix = { version = ">=0.30, <0.32", features = ["poll"] }
wayland-server = "0.31"
calloop = { version = ">=0.10, <0.15" }
log = "0.4"
