[workspace]
members = [
  "src/platforms/evdev-rs",
  "src/wayland/wayland_rs"
]
resolver = "2"

[workspace.package]
name = "mir"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[workspace.dependencies]
cxx = { version = ">=1.0.167" }
cxx-build = { version = ">=1.0.167" }
input = { version = ">=0.8.3, <0.10", features = ["libinput_1_19"] }
libc = "0.2.175"
nix = { version = ">=0.30, <0.32", features = ["poll"] }
wayland-server = { version = ">=0.31" }
calloop = { version = ">=0.10, <0.15" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = ">=0.38", features = ["serialize"] }
wayland-scanner = { version = ">=0.31" }
wayland-backend = { version = ">=0.3" }
bitflags = "2"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full", "parsing"] }
